Feat/get predictions (#51)
* feat: first sketch

* add url

* Added call to forecast
Changed .env requirements
Documented endpoint

* catch field is requiered

* fix linters

* small linter fix

* fix pr

* Update backend/forecast/views.py


* Update backend/forecast/views.py


* Update docs/openapi.json


* fix pr

* Update backend/settings.py


* Update backend/forecast/views.py
